[gd_scene format=3 uid="uid://175upo1vkes4"]

[ext_resource type="Script" uid="uid://dx32v8k2let3a" path="res://Scenes/mr_big_boss.gd" id="1_n12c3"]
[ext_resource type="PackedScene" uid="uid://dvgxwv3xutdkx" path="res://Scenes/big_bullet.tscn" id="2_24ewy"]
[ext_resource type="Texture2D" uid="uid://cssf7jckmtt6n" path="res://Assets/final boss.png" id="3_24ewy"]
[ext_resource type="Texture2D" uid="uid://dgqiar5slw87a" path="res://Assets/death.png" id="4_hdcbd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hghv2"]
radius = 34.6875
height = 70.625

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afpow"]
size = Vector2(70.73865, 75.56819)

[sub_resource type="Animation" id="Animation_afpow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_287tu"]
resource_name = "damage"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1.0, 0.25, 0.01]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0830c"]
_data = {
&"RESET": SubResource("Animation_afpow"),
&"damage": SubResource("Animation_287tu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_287tu"]
size = Vector2(453.0114, 129.78409)

[node name="Mr Big Boss" type="CharacterBody2D" unique_id=949670304 groups=["Enemy"]]
scale = Vector2(16, 16)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_n12c3")
bullet_scene = ExtResource("2_24ewy")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1828768671]
position = Vector2(1.1363642, -4.829546)
scale = Vector2(1.3273307, 1.3273307)
texture = ExtResource("3_24ewy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1557876781]
position = Vector2(-1, -7.1875)
shape = SubResource("CapsuleShape2D_hghv2")

[node name="Death_Sprite" type="Sprite2D" parent="." unique_id=804253344]
visible = false
position = Vector2(2.2727277, -21.022732)
scale = Vector2(0.215, 0.215)
texture = ExtResource("4_hdcbd")

[node name="MaskPickup" type="Area2D" parent="." unique_id=900359403]
position = Vector2(0.28409097, -17.045458)
collision_layer = 4
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="MaskPickup" unique_id=368657303]
position = Vector2(-1.5625011, 14.204557)
shape = SubResource("RectangleShape2D_afpow")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1446371674]
libraries/ = SubResource("AnimationLibrary_0830c")

[node name="ColorRect" type="ColorRect" parent="." unique_id=22685013]
visible = false
offset_left = -18.465912
offset_top = -21.875004
offset_right = 6.4140873
offset_bottom = 11.269997
scale = Vector2(1.1177692, 1.4295305)
color = Color(0.7474506, 0.043625005, 9.62615e-08, 1)

[node name="ShootTimer" type="Timer" parent="." unique_id=1114157039]
wait_time = 2.6999999999999997

[node name="LeftAim" type="Area2D" parent="." unique_id=339510725]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAim" unique_id=307555422]
position = Vector2(-228, -0.5)
shape = SubResource("RectangleShape2D_287tu")

[node name="RightAim" type="Area2D" parent="." unique_id=1613493033]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAim" unique_id=26392414]
position = Vector2(229, 0)
shape = SubResource("RectangleShape2D_287tu")

[connection signal="body_entered" from="MaskPickup" to="." method="_on_mask_pickup_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="LeftAim" to="." method="_on_left_aim_body_entered"]
[connection signal="body_exited" from="LeftAim" to="." method="_on_left_aim_body_exited"]
[connection signal="body_entered" from="RightAim" to="." method="_on_right_aim_body_entered"]
[connection signal="body_exited" from="RightAim" to="." method="_on_right_aim_body_exited"]
